# networking-oneview

./: .coveragerc  .gitignore  .gitlab-ci.yml  .stestr.conf  .travis.yml  AUTHORS  CHANGELOG.md  README.md  README.rst  ci_test.py  install-driver.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
config/: mech_oneview.ini  networking-oneview-config-generator.conf
doc/source/: conf.py
etc/neutron/plugins/ml2/: ml2_conf_oneview.ini  ml2_conf_oneview.ini.sample
networking_oneview/conf/: __init__.py  default.py  oneview.py  opts.py
networking_oneview/db/: oneview_network_db.py  oneview_network_db_tables.py
networking_oneview/db/migration/alembic_migrations/: env.py
networking_oneview/db/migration/alembic_migrations/versions/: 56529a79cf3b_initial_db_version.py
networking_oneview/db/migration/alembic_migrations/versions/newton/expand/: 64c974fb52b0_neutron_network_oneview.py
networking_oneview/ml2/drivers/oneview/: common.py  database_manager.py  driver_daemon.py  exceptions.py  init_sync.py  mech_oneview.py  neutron_context_common.py  neutron_oneview_client.py  resources_sync.py  synchronization.py  utils.py
networking_oneview/samples/: ml2_conf.ini
networking_oneview/tests/: test_port.py
networking_oneview/tests/unit/: test_networking_oneview.py
networking_oneview/tests/unit/ml2/drivers/oneview/: test_common.py  test_mech_oneview.py  test_oneview_mech_driver.py  test_resources_sync.py  test_synchronization.py
