[metadata]
name = networking-oneview
summary = HPE OneView Mechanism Driver for Neutron ML2 plugin
description-file =
    README.md
author = UFCG
author-email = ricardo@lsd.ufcg.edu.br
home-page = https://github.com/HewlettPackard/networking-oneview
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_oneview
data_files = 
    /etc/neutron/plugins/ml2 = etc/neutron/plugins/ml2/*

[entry_points]
neutron.ml2.mechanism_drivers =
    oneview = networking_oneview.ml2.drivers.oneview.mech_oneview:OneViewDriver
neutron.db.alembic_migrations =
    oneview = networking_oneview.db.migration:alembic_migrations
oslo.config.opts = 
     networking-oneview = networking_oneview.conf.opts:list_opts

